[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Anastasiyasib <81587170+Anastasiyasib@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
